--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:api": "bunx @rtk-query/codegen-openapi ./src/redux/openapi-config.json"
   },
   "main": "dist/bundle.js",
   "dependencies": {
@@ -19,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
