--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       "@/components/*": [
         "./src/components/*"
       ],
+      "@/pages/*": [
+        "./src/pages/*"
+      ],
       "@/lib/*": [
         "./src/lib/*"
       ],
