--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/inter": "^5.0.17",
     "@mui/joy": "^5.0.0-beta.32",
     "@reduxjs/toolkit": "^2.2.3",
+    "lucide-react": "^0.371.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
