--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.17",
     "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "lucide-react": "^0.371.0",
     "react": "^18.2.0",
